--- a/NLNN_Clip_Classifier.ipynb
+++ b/NLNN_Clip_Classifier.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clip Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -43,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data\n",
+    "### Data\n",
     "\n",
     "The dataset consists of fMRI time-series activations \n",
     "- 300 ROIs: schafer 300 ROI parcellation,\n",
@@ -364,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model"
+    "### Model"
    ]
   },
   {
@@ -453,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance evaluation"
+    "### Performance evaluation"
    ]
   },
   {
@@ -601,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing accuracy"
+    "### Testing accuracy"
    ]
   },
   {
@@ -647,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
