--- a/NLNN_CC_Randomization.ipynb
+++ b/NLNN_CC_Randomization.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load data**"
+    "### Load data"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create graphs from data**"
+    "### Create graphs from data"
    ]
   },
   {
@@ -131,8 +131,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Performance evaluation**\n",
-    "**Cross-validation**"
+    "### Performance evaluation\n",
+    "### Cross-validation"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**With shuffled labels**"
+    "### With shuffled labels"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**With true labels*"
+    "### With true labels"
    ]
   },
   {
