Add cell tags for jupyterbook

--- a/NLNN_Clip_Classifier.ipynb
+++ b/NLNN_Clip_Classifier.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "from IPython.display import display, HTML"
@@ -19,7 +23,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "from __future__ import absolute_import\n",
@@ -61,7 +69,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -325,7 +337,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -371,35 +387,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model"
+    "## Model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"NLNN.png\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(HTML('''<img src=\"NLNN.png\">'''))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -433,13 +422,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Performance evaluation"
+    "## Performance evaluation\n",
+    "### Training/validation accuracy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -524,7 +518,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -587,7 +585,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
